<resources>
    <string name="app_name">Home Services</string>

    <string name="ip">http://192.168.0.19</string>

    <!--<string name="key">AIzaSyDapRXYomjpMsWAW4IR22pZgQhMila5l5U</string>-->
    <string name="key">AIzaSyABHERCYTpEBIEUlzEOYHimZsU2sfk4zXg</string>
    <string-array name="category">
        <item>Select Category</item>
        <item>Electricians</item>
        <item>Plumbers</item>
        <item>Pest Control</item>
        <item>Geyser</item>
        <item>Carpenters</item>
        <item>AC Service</item>
        <item>Refregerator Repair</item>
        <item>Washing Machine Repair</item>
        <item>Water Purifier Repair</item>
        <item>Microwave Repair</item>
        <item>Kitchen Deep cleaning</item>
        <item>Home Deep cleaning</item>
        <item>Carpet Cleaning</item>
        <item>Bathroom Deep Cleaning</item>
        <item>Garden Cleaning</item>
        <item>Sofa Cleaning</item>
        <item>Home Painting</item>
        <item>Architect</item>
        <item>Modular Kitchen</item>
        <item>Bathroom Renovation</item>
        <item>Furniture</item>
    </string-array>
    <string-array name="customer_drawerlayout">
        <item>My Profile</item>
        <item>Home</item>
        <item>My Orders</item>
        <item>My Wallet</item>
        <item>Help Center</item>
        <item>Rate Home Services</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_customer_navigation">CustomerNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_home_activitty">CustomerHomeActivitty</string>
    <string name="title_activity_customer_profile">CustomerProfile</string>
    <string name="title_activity_provider_home">ProviderHomeActivity</string>
    <string name="title_activity_provider_profile">ProviderProfileActivity</string>

    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_customer_request">CustomerRequest</string>
    <string name="title_activity_provider_list_for_customer">ProviderListForCustomer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_customer_order">CustomerOrder</string>
    <string name="title_activity_service_man">ServiceMan</string>
    <string name="title_activity_assign_service_man">AssignServiceMan</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_customer_service_page">CustomerServicePage</string>
</resources>
