<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sample"
    tools:context=".CustomerMobileSignup">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/new_home"/>


        <LinearLayout
            android:id="@+id/phoneAuthFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="Please Verify Your Mobile Number"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@android:color/background_dark"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColorHint="@android:color/background_dark"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold|italic"/>


                <EditText
                    android:id="@+id/fieldPhoneNumber"
                    android:hint="@string/hint_phone_number"
                    android:text="+91"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@android:color/background_dark"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColorHint="@android:color/background_dark"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_call_black1_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/background_dark" />

                <EditText
                    android:id="@+id/fieldVerificationCode"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@android:color/background_dark"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColorHint="@android:color/background_dark"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/background_dark" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonStartVerification"
                    android:text="Send"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/background_signup"
                    android:layout_marginLeft="40dp"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonVerifyPhone"
                    android:text="@string/verify_phone_auth"
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_signup"
                    android:layout_marginLeft="40dp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonResend"
                    android:text="@string/resend_phone_auth"
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_signup"
                    android:layout_marginLeft="40dp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="50dp"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

</LinearLayout>

</ScrollView>